fix background color flicker on page loads
git-svn-id: file:///home/awy/mirror/slim/trunk/server@15162 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Default/slimserver.css
+++ b/HTML/Default/slimserver.css
@@ -14,7 +14,7 @@ body.main {
 	background: #666666;
 }
 
-#playlistPanel, .inner_content, #maincontent {
+#playlistPanel, .inner_content, #maincontent, body {
 	background-color: #3d6266;
 }
 
